// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Header /> rendering should render sticky msg and close it on clicking close-btn 1`] = `
<Fragment>
  <div
    className="header-container"
  >
    <div
      className="header-row-1"
    >
      <div
        className="header-row-1-inner"
      >
        <div
          className="header-branding"
        >
          <div
            className="header-logo-div"
          >
            <Link
              to="/default"
            >
              <img
                alt="openwisp"
                className="header-logo-image"
                src="/assets/default/openwisp-logo-black.svg"
              />
            </Link>
          </div>
        </div>
        <div
          className="header-controls"
        >
          <button
            aria-expanded={false}
            aria-label="Menu Button"
            className="header-hamburger "
            onClick={[Function]}
            onKeyUp={[Function]}
            type="button"
          >
            <div
              className=""
            />
            <div
              className=""
            />
            <div
              className=""
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="header-row-2 header-navigation menu-closed"
    >
      <div
        className="header-row-2-inner"
      >
        <div
          className="header-link-group"
        >
          <a
            className="header-link header-link-1  button"
            href="link-1/"
            key="link-1/"
            rel="noreferrer noopener"
            target="_blank"
          >
            link-1
          </a>
          <a
            className="header-link header-link-2  button"
            href="link-2/"
            key="link-2/"
            rel="noreferrer noopener"
            target="_blank"
          >
            link-2
          </a>
        </div>
        <div
          className="header-language-group"
        >
          <button
            className="active header-language-btn header-language-btn-en"
            key="en"
            onClick={[Function]}
            type="button"
          >
            english
          </button>
          <button
            className="header-language-btn header-language-btn-it"
            key="it"
            onClick={[Function]}
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sticky-container"
    role="banner"
  >
    <div
      className="inner"
    >
      <div
        className="sticky-msg"
        dangerouslySetInnerHTML={
          {
            "__html": <p>
              announcement
            </p>,
          }
        }
      />
      <button
        className="close-sticky-btn"
        onClick={[Function]}
        type="button"
      >
        ✖
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`<Header /> rendering should render with links 1`] = `
<div
  className="header-container"
>
  <div
    className="header-row-1"
  >
    <div
      className="header-row-1-inner"
    >
      <div
        className="header-branding"
      >
        <div
          className="header-logo-div"
        >
          <a
            href="/default"
            onClick={[Function]}
          >
            <img
              alt="openwisp"
              className="header-logo-image"
              src="/assets/default/openwisp-logo-black.svg"
            />
          </a>
        </div>
      </div>
      <div
        className="header-controls"
      >
        <button
          aria-expanded={false}
          aria-label="Menu Button"
          className="header-hamburger "
          onClick={[Function]}
          onKeyUp={[Function]}
          type="button"
        >
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="header-row-2 header-navigation menu-closed"
  >
    <div
      className="header-row-2-inner"
    >
      <div
        className="header-link-group"
      >
        <a
          className="header-link header-link-1  button"
          href="link-1/"
          rel="noreferrer noopener"
          target="_blank"
        >
          link-1
        </a>
        <a
          className="header-link header-link-2  button"
          href="link-2/"
          rel="noreferrer noopener"
          target="_blank"
        >
          link-2
        </a>
      </div>
      <div
        className="header-language-group"
      >
        <button
          className="active header-language-btn header-language-btn-en"
          onClick={[Function]}
          type="button"
        >
          english
        </button>
        <button
          className="header-language-btn header-language-btn-it"
          onClick={[Function]}
          type="button"
        >
          italian
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Header /> rendering should render without links 1`] = `
<div
  className="header-container"
>
  <div
    className="header-row-1"
  >
    <div
      className="header-row-1-inner"
    >
      <div
        className="header-branding"
      >
        <div
          className="header-logo-div"
        >
          <a
            href="/default"
            onClick={[Function]}
          >
            <img
              alt="openwisp"
              className="header-logo-image"
              src="/assets/default/openwisp-logo-black.svg"
            />
          </a>
        </div>
      </div>
      <div
        className="header-controls"
      >
        <button
          aria-expanded={false}
          aria-label="Menu Button"
          className="header-hamburger "
          onClick={[Function]}
          onKeyUp={[Function]}
          type="button"
        >
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="header-row-2 header-navigation menu-closed"
  >
    <div
      className="header-row-2-inner"
    >
      <div
        className="header-link-group"
      />
      <div
        className="header-language-group"
      >
        <button
          className="active header-language-btn header-language-btn-en"
          onClick={[Function]}
          type="button"
        >
          english
        </button>
        <button
          className="header-language-btn header-language-btn-it"
          onClick={[Function]}
          type="button"
        >
          italian
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Header /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<Fragment>
  <div
    className="header-container"
  >
    <div
      className="header-row-1"
    >
      <div
        className="header-row-1-inner"
      >
        <div
          className="header-branding"
        >
          <div
            className="header-logo-div"
          >
            <Link
              to="/default"
            >
              <img
                alt="openwisp"
                className="header-logo-image"
                src="/assets/default/openwisp-logo-black.svg"
              />
            </Link>
          </div>
        </div>
        <div
          className="header-controls"
        >
          <button
            aria-expanded={false}
            aria-label="Menu Button"
            className="header-hamburger "
            onClick={[Function]}
            onKeyUp={[Function]}
            type="button"
          >
            <div
              className=""
            />
            <div
              className=""
            />
            <div
              className=""
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="header-row-2 header-navigation menu-closed"
    >
      <div
        className="header-row-2-inner"
      >
        <div
          className="header-link-group"
        >
          <a
            className="header-link header-link-1 active button"
            href="/{orgSlug}/login"
            key="/default/login"
            rel="noreferrer noopener"
            target="_blank"
          >
            Sign In
          </a>
          <a
            className="header-link header-link-2  button"
            href="/{orgSlug}/registration"
            key="/default/registration"
            rel="noreferrer noopener"
            target="_blank"
          >
            Sign Up
          </a>
        </div>
        <div
          className="header-language-group"
        >
          <button
            className="active header-language-btn header-language-btn-en"
            key="en"
            onClick={[Function]}
            type="button"
          >
            english
          </button>
          <button
            className="header-language-btn header-language-btn-it"
            key="it"
            onClick={[Function]}
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
